Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44765

QSyntaxtHighlighter::rehighlight doesn't update TextEdit

XMLWordPrintable

    • bef1f341f1516a8c919ac4b6b62841aef7e2639a

      QQuickTextEdit::invalidateBlock method marks nodes as dirty but doesn't
      call QQuickItem::update(). Because of that it's impossible to
      rehighlight text by QSyntaxHighlighter.

      Example is attached.

      Expected behavior: text's color is changed on radio button click.
      Actual behavior: nothing happens until somebody updates text edit itself (by moving cursor/selection/text editing).

        1. highlight-bug.tar.gz
          4 kB
          Ruslan Nigmatullin
        2. highlighter-bug-qt6.tgz
          3 kB
          Nils Jeisecke
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            elessar Ruslan Nigmatullin
            elessar Ruslan Nigmatullin
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes